--- a/student-backend/src/main/resources/application.properties
+++ b/student-backend/src/main/resources/application.properties
@@ -2,10 +2,21 @@
 #spring.security.user.name=admin
 #spring.security.user.password=admin
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/ganesh
-spring.datasource.username=postgres
-spring.datasource.password=Ganesh@2003
-spring.jpa.hibernate.ddl-auto=create-drop
+#Local postgres
+#spring.datasource.url=jdbc:postgresql://localhost:5432/ganesh
+#spring.datasource.username=postgres
+#spring.datasource.password=Ganesh@2003
+
+#spring.datasource.driver-class-name=org.postgresql.Driver
+#spring.datasource.url=jdbc:postgresql://172.17.0.2:5432/mydb
+#spring.datasource.username=admin
+#spring.datasource.password=password
+
+spring.datasource.url=${SPRING_DATASOURCE_URL}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
+
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.format_sql=true
